--- a/portfoli.css
+++ b/portfoli.css
@@ -1,6 +1,6 @@
 body {
   background: url(bilder\test.jpg) no-repeat center center fixed;
-    background-size: auto; cover;
+    background-size: auto; 
 }
 .sidebar {
     width: 120px;
